@@ -40,13 +40,6 @@ def universe():
     return MDAnalysis.Universe(waterPSF, waterDCD)
 
 
-def test_HydrogenBondLifetimes(universe):
-    hbl = waterdynamics.HydrogenBondLifetimes(
-        universe, SELECTION1, SELECTION1, 0, 5, 3)
-    hbl.run()
-    assert_almost_equal(hbl.timeseries[2][1], 0.75, 5)
-
-
 def test_WaterOrientationalRelaxation(universe):
     wor = waterdynamics.WaterOrientationalRelaxation(
         universe, SELECTION1, 0, 5, 2)
